--- a/main/renderer/style.css
+++ b/main/renderer/style.css
@@ -2,6 +2,13 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+ /* font-family: "Segoe UI", Arial, sans-serif; */
+  font-weight: bold;
+}
+@font-face {
+    font-family: "Segoe UI";
+    font-weight: 300;
+    src: local("Segoe UI Semilight"), local("Segoe UI");
 }
 body {
   background: #eef2f6;
@@ -17,9 +24,9 @@ body {
   display: flex;
   align-items: center;
   height: 32px;
-  margin-left: 90px;
-  margin-right: 32px;
-  overflow: auto;
+ /* margin-left: 90px; */
+  margin-right: 32px; 
+  overflow: hidden;
 }
 .tab {
   flex: 1 1 0;
@@ -81,7 +88,7 @@ body {
   height: 32px;
   padding: 4px 11px;
   border: 1px solid #d9d9d9;
-  border-radius: 4px;
+  border-radius: 5px;
   background: #eceff2;
   outline: none;
   font-size: 12px;
@@ -97,7 +104,7 @@ body {
   flex-shrink: 0;
   display: flex;
   justify-content: space-evenly;
-  width: 118px;
+  width: auto;
   margin-right: 18px;
 }
 .action {
@@ -115,4 +122,8 @@ body {
 }
 .action:not(.disabled):hover {
   background: #eee;
+}
+.plusic{
+  background: white;
+  border-radius: 2px;
 }
